Small styles fixes.
Make span.error on radio button collections look good.
Remove awkward break on  “converge advocate” text in student
application setup form.

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -38,10 +38,10 @@
 .clearfix {
   zoom:1;
   &:before, &:after {
-      content: "\0020";
-      display: block;
-      height: 0;
-      overflow: hidden;
+    content: "\0020";
+    display: block;
+    height: 0;
+    overflow: hidden;
   }
   &:after { clear: both; }
 }
@@ -256,8 +256,7 @@ nav.main {
     span:last-child {
       padding-right: 0em;
     }
-    }
-
+  }
 }
 
 
@@ -368,10 +367,7 @@ form {
 
   div.input {  @include trailer(); }
 
-  .invalid {
-    position: static;
-    display: inherit;
-  }
+  .invalid { display: inherit; }
 
   span.error {
     padding-left: 0.5em;
@@ -382,9 +378,9 @@ form {
     margin-top: -17px;
     display: block;
     padding-bottom: 5px;
-
   }
 
+  .radio_buttons span.error { margin-top: 0px; }
 }
 
 fieldset {
