--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -45,7 +45,6 @@ form#new_student_application, form.edit_student_application, form.new_student_ap
   }
 
   .student_application_student_heard_about_ipo {
-    width: 95%;
     line-height: 3em;
   }
 
